products in home page(4 in a row)fixed and fixed the gap between input and button

--- a/src/Components/HomeProductPage/HomeProductPage.css
+++ b/src/Components/HomeProductPage/HomeProductPage.css
@@ -25,7 +25,7 @@
 
 @media (max-width: 820px) {
   .product-container {
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(4, 1fr);
   }
 }
 
