--- a/src/Components/ui/Input/Input.css
+++ b/src/Components/ui/Input/Input.css
@@ -1,6 +1,6 @@
 .input-container {
   padding-left: 1%;
-  margin: 1%;
+  /* margin: 1%; */
   display: flex;
   background-color: transparent;
   justify-content: center;
